updated index to home page

--- a/app/views/agile-working/agile-home.html
+++ b/app/views/agile-working/agile-home.html
@@ -28,23 +28,23 @@
         <ol class="list-main-contents">
           <li>
             <a href="/agile-working/what-is-agile">What is agile?</a>
-            <p>Words about what is agile</p>
+            <p>The agile working methodologies</p>
           </li>
           <li>
             <a href="/agile-working/why-agile-works">Why agile works</a>
-            <p>Words about what is agile</p>
+            <p>Advantages of using agile</p>
           </li>          
           <li>
             <a href="/agile-working/moving-to-agile/agile-training">Moving to agile</a>
-            <p>Words about what is agile</p>
+            <p>How to implement agile in your team and organisation</p>
           </li>          
           <li>
             <a href="/agile-working/working-agile-teams/agile-and-your-role">Working in agile teams</a>
-            <p>Words about what is agile</p>
+            <p>Working collaboratively</p>
           </li>          
           <li>
             <a href="/agile-working/agile-governance">Agile governance</a>
-            <p>Words about what is agile</p>
+            <p>Enabling service delivery teams</p>
           </li>        
         </ol>
 
