--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,7 +27,7 @@
   	<div class="column-third">
   		<h2 class="heading-medium"><a href="/agile-working/agile-home">Agile working</a></h2>
       <p>
-        Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+        Create fast iterations of products based on the feedback of real users.   
       </p>
   		<!--
 			<ul class="list-bullet">
@@ -42,13 +42,13 @@
   	<div class="column-third">
   		<h2 class="heading-medium"><a href="#">Assisted digital</a></h2>
   		<p>
-  			Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+  			Include people who aren't online or who have limited digital capability.
   		</p>
   	</div>
   	<div class="column-third">
   		<h2 class="heading-medium"><a href="#">Governance</a></h2>
   		<p>
-  			Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+  			Create the right conditions for delivery teams to build successful services.
   		</p>
   	</div>
 	</div>
@@ -57,24 +57,44 @@
   	<div class="column-third">
   		<h2 class="heading-medium"><a href="#">Making software</a></h2>
   		<p>
-  			Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+  			Build and test a digital service quickly, securely and collaboratively.
   		</p>
 		</div>
   	<div class="column-third">
   		<h2 class="heading-medium"><a href="#">Measuring success</a></h2>
   		<p>
-  			Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+  			Check your service continually meets user needs in a cost-effective and efficient way.
   		</p>
   	</div>
   	<div class="column-third">
   		<h2 class="heading-medium"><a href="#">Operating services</a></h2>
   		<p>
-  			Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+  			Ensure your system is set up, hosted and tested to meet user demand.
   		</p>
   	</div>
+  </div>
+  <div class="grid-row">
+    <div class="column-third">
+      <h2 class="heading-medium"><a href="#">Technology</a></h2>
+      <p>
+        Build a system that is secure, sustainable, cost-effective and meets user needs.
+      </p>
+    </div>
+    <div class="column-third">
+      <h2 class="heading-medium"><a href="#">The team</a></h2>
+      <p>
+        Recruit, manage and work in a multidisciplinary agile team.
+      </p>
+    </div>
+    <div class="column-third">
+      <h2 class="heading-medium"><a href="#">User-centred design</a></h2>
+      <p>
+        Combine design and research to build user-focused services.
+      </p>
+    </div>
 	</div>
 
-	<a href="#" class="heading-medium">All topics</a>
+	<a href="#" class="text-medium">View all topics</a>
 
 </main>
 
