--- a/app/views/agile-working/agile-home.html
+++ b/app/views/agile-working/agile-home.html
@@ -9,8 +9,7 @@
 <div id="global-breadcrumb" class="breadcrumb">
   <ol role="breadcrumbs" class="group">
     <li><a href="/">Home</a></li>
-    <li><a href="/">Agile working</a></li>
-    <li><strong><a href="/">Moving to agile</a></strong></li>
+    <li><strong>Agile working</strong></li>
   </ol>
 </div>
 
@@ -39,7 +38,7 @@
             <p>How to implement agile in your team and organisation</p>
           </li>          
           <li>
-            <a href="/agile-working/working-agile-teams/agile-and-your-role">Working in agile teams</a>
+            <a href="/agile-working/working-agile-teams/team-structure">Working in agile teams</a>
             <p>Working collaboratively</p>
           </li>          
           <li>
