--- a/app/views/agile-working/what-is-agile.html
+++ b/app/views/agile-working/what-is-agile.html
@@ -9,8 +9,8 @@
 <div id="global-breadcrumb" class="breadcrumb">
   <ol role="breadcrumbs" class="group">
     <li><a href="/">Home</a></li>
-    <li><a href="/">Agile working</a></li>
-    <li><strong><a href="/">What is agile working?</a></strong></li>
+    <li><a href="/agile-working/agile-home">Agile working</a></li>
+    <li><strong>What is agile?</strong></li>
   </ol>
 </div>
 
