--- a/app/views/agile-working/why-agile-works.html
+++ b/app/views/agile-working/why-agile-works.html
@@ -9,8 +9,8 @@
 <div id="global-breadcrumb" class="breadcrumb">
   <ol role="breadcrumbs" class="group">
     <li><a href="/">Home</a></li>
-    <li><a href="/agile-home">Agile working</a></li>
-    <li><strong><a href="/">Why agile works</a></strong></li>
+    <li><a href="/agile-working/agile-home">Agile working</a></li>
+    <li><strong>Why agile works</strong></li>
   </ol>
 </div>
 
@@ -41,7 +41,7 @@
         <li><a href="#more-productive">You’ll more productive</a></li>
         <li><a href="#better-for-users">It’s better for users</a></li>
       </ol>
-      
+
       <h3 class="heading-medium" id="minimises-risk">1. It minimises risk</h3>
         <p>Building a digital service is a complex task, with many risks. By breaking development into phases you minimise risk, learning about what works and what doesn't, iterating as you go.
         </p>
