--- a/app/views/agile-working/agile-governance.html
+++ b/app/views/agile-working/agile-governance.html
@@ -9,8 +9,8 @@
 <div id="global-breadcrumb" class="breadcrumb">
   <ol role="breadcrumbs" class="group">
     <li><a href="/">Home</a></li>
-    <li><a href="/">Agile working</a></li>
-    <li><strong><a href="/">Agile governance</a></strong></li>
+    <li><a href="/agile-working/agile-home">Agile working</a></li>
+    <li><strong>Agile governance</strong></li>
   </ol>
 </div>
 
