--- a/app/views/agile-working/agile-working.html
+++ b/app/views/agile-working/agile-working.html
@@ -9,7 +9,7 @@
 <div id="global-breadcrumb" class="breadcrumb">
   <ol role="breadcrumbs" class="group">
     <li><a href="/">Home</a></li>
-    <li><a href="/">Agile working</a></li>
+    <li><a href="/agile-working/agile-home">Agile working</a></li>
     <li><strong><a href="/">Moving to agile</a></strong></li>
   </ol>
 </div>
