--- a/app/views/agile-working/working-agile-teams/team-structure.html
+++ b/app/views/agile-working/working-agile-teams/team-structure.html
@@ -9,8 +9,8 @@
 <div id="global-breadcrumb" class="breadcrumb">
   <ol role="breadcrumbs" class="group">
     <li><a href="/">Home</a></li>
-    <li><a href="/">Agile working</a></li>
-    <li><strong><a href="/">Working in agile teams</a></strong></li>
+    <li><a href="/agile-working/agile-home">Agile working</a></li>
+    <li><strong>Working in agile teams</strong></li>
   </ol>
 </div>
 
