--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,7 +11,7 @@
 		<div class="column-two-thirds">
       <h1 class="heading-xlarge">Service Manual</h1>
       <p class="lede">
-        Cras mattis consectetur purus sit amet fermentum. Donec sed odio dui. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        The service manual helps service managers and digital delivery teams across government make services so good that people prefer to use them.
       </p>
 
 			<form id="header-search" class="site-search" action="/search" method="get" role="search">
