added agile-home lede

--- a/app/views/agile-working/agile-home.html
+++ b/app/views/agile-working/agile-home.html
@@ -21,7 +21,7 @@
 
     <div class="column-two-thirds">
       <p class="lede">
-        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
+        Agile is about creating fast iterations of products based on the feedback of real users.
       </p>
 
         <ol class="list-main-contents">
